assets/sass/_bc-additions.scss
/* ... */
@media only screen and (min-width: 766px) {
  a.gettysburg-two-thirds:hover p.gettysburg-two-thirds {
    opacity: 1;
    padding-top: 0px;
    transition: 0.6s;

  }
  a.gettysburg-one-third:hover p.gettysburg-one-third {
    opacity:1;
    padding-top: 0px;
    transition: 0.6s;
  }
  .gettysburg-top-left {
    margin-right: -5px !important;
    margin-bottom: -5px !important; }

  .gettysburg-top-right {
    margin-left: -5px !important;
    margin-bottom: -5px !important; }

  .gettysburg-middle-left {
    margin-right: -5px !important;
    margin-top: -10px !important;
    margin-bottom: -10px !important; }

  .gettysburg-middle-right {
    margin-left: -5px !important;
    margin-top: -10px !important;
    margin-bottom: -10px !important; }

  .gettysburg-bottom-left {
    margin-right: -5px !important;
    margin-top: -5px !important; }

  .gettysburg-bottom-right {
    margin-left: -5px !important;
    margin-top: -5px !important; }
}

@media only screen and (max-width: 766px) {
  .gettysburg-top-left {
    margin-bottom: -40px !important; }

  .gettysburg-top-right {
    margin-bottom: -40px !important; }

  .gettysburg-middle-left {
    margin-bottom: -40px !important; }

  .gettysburg-middle-right {
    margin-bottom: -40px !important; }

  .gettysburg-bottom-left {
    margin-bottom: -40px !important; }

  .gettysburg-bottom-right { }

  a.gettysburg-two-thirds {
    padding-top: 25%;
  }
  div.gettysburg-two-thirds {
    padding-top: 20%;
    margin-top: -38px;
    margin-left: -50px;
    height: 42vw !important;
    width: 100vw !important;
  }
  div.gettysburg-container {

  }
  h2.gettysburg-two-thirds {
    font-size: 26px !important;
  }

  a.gettysburg-one-third {
    padding-top: 25%;
  }
  h2.gettysburg-one-third {
    font-size: 26px !important;
  }
  p.gettysburg-quote {
    font-size:22px !important;
  }
  a.gettysburg-top-right-2-img {
    background-position: top !important;
  }
  a.gettysburg-bottom-left-img {
    background-position: top !important;
  }
}

@media only screen and (max-width: 630px) {
  .gettysburg-top-left {
    margin-bottom: -40px !important; }

  .gettysburg-top-right {
    margin-bottom: -40px !important; }

  .gettysburg-middle-left {
    margin-bottom: -40px !important; }

  .gettysburg-middle-right {
    margin-bottom: -40px !important; }

  .gettysburg-bottom-left {
    margin-bottom: -40px !important; }

  .gettysburg-bottom-right { }


  div.gettysburg-two-thirds {
    padding-top: 20%;
    margin-top: -38px;
    margin-left: -50px;
    height: 42vw !important;
    width: 100vw !important;
  }
  div.gettysburg-container {

  }
  h2.gettysburg-two-thirds {
    font-size: 26px !important;
  }

  h2.gettysburg-one-third {
    font-size: 26px !important;
  }
  p.gettysburg-quote {
    font-size:20px !important;
  }
}

@media only screen and (max-width: 560px) {
  .gettysburg-top-left {
    margin-bottom: -40px !important; }

  .gettysburg-top-right {
    margin-bottom: -40px !important; }

  .gettysburg-middle-left {
    margin-bottom: -40px !important; }

  .gettysburg-middle-right {
    margin-bottom: -40px !important; }

  .gettysburg-bottom-left {
    margin-bottom: -40px !important; }

  .gettysburg-bottom-right { }

  div.gettysburg-two-thirds {
    padding-top: 20%;
    margin-top: -38px;
    margin-left: -50px;
    height: 42vw !important;
    width: 100vw !important;
  }
  div.gettysburg-container {

  }
  h2.gettysburg-two-thirds {
    font-size: 26px !important;
  }

  h2.gettysburg-one-third {
    font-size: 26px !important;
  }
  p.gettysburg-quote {
    font-size:16px !important;
  }
}


div.gettysburg-top-left-2-img {
  background: url('/wp-content/uploads/2019/10/quotationBG.png');
}

a.gettysburg-top-right-2-img {
  background: url('/wp-content/uploads/2019/10/ApplyandVisit.jpg');
  box-shadow: 0px 1000px rgba(0, 0, 0, 0.25) inset;
  transition: box-shadow 0.6s;
}
a.gettysburg-top-right-2-img:hover {
  background: url('/wp-content/uploads/2019/10/ApplyandVisit.jpg');
  box-shadow: 0px 1000px rgba(0, 0, 0, 0.6) inset;
  transition: box-shadow 0.6s;
}
a.gettysburg-top-left-img {
  background: url('/wp-content/uploads/2019/10/HistoricalPhoto.jpg');
  box-shadow: 0px 1000px rgba(0, 0, 0, 0.25) inset;
  transition: box-shadow 0.6s;
}
a.gettysburg-top-left-img:hover {
  background: url('/wp-content/uploads/2019/10/HistoricalPhoto.jpg');
  box-shadow: 0px 1000px rgba(0, 0, 0, 0.6) inset;
  transition: box-shadow 0.6s;
}
a.gettysburg-top-right-img {
  background: url('/wp-content/uploads/2019/10/Labor.jpg');
  box-shadow: 0px 1000px rgba(0, 0, 0, 0.25) inset;
  transition: box-shadow 0.6s;
}
a.gettysburg-top-right-img:hover {
  background: url('/wp-content/uploads/2019/10/Labor.jpg');
  box-shadow: 0px 1000px rgba(0, 0, 0, 0.6) inset;
  transition: box-shadow 0.6s;
}
a.gettysburg-bottom-left-img {
  background: url('/wp-content/uploads/2019/10/FundingModel.jpg');
  box-shadow: 0px 1000px rgba(0, 0, 0, 0.25) inset;
  transition: box-shadow 0.6s;
}
a.gettysburg-bottom-left-img:hover {
  background: url('/wp-content/uploads/2019/10/FundingModel.jpg');
  box-shadow: 0px 1000px rgba(0, 0, 0, 0.6) inset;
  transition: box-shadow 0.6s;
}
a.gettysburg-bottom-right-img {
  background: url('/wp-content/uploads/2019/10/ChancetoChangetheWorld.jpg');
  box-shadow: 0px 1000px rgba(0, 0, 0, 0.25) inset;
  transition: box-shadow 0.6s;
}
a.gettysburg-bottom-right-img:hover {
  background: url('/wp-content/uploads/2019/10/ChancetoChangetheWorld.jpg');
  box-shadow: 0px 1000px rgba(0, 0, 0, 0.6) inset;
  transition: box-shadow 0.6s;
}

a.gettysburg-two-thirds {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  display: block;
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: pointer;
}
/* ... */

